[package]
name = "remoteprocess"
version = "0.4.12"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/remoteprocess"
homepage = "https://github.com/benfred/remoteprocess"
description = "cross platform api for getting information on a running processes"
readme = "README.md"
license = "MIT"
build="build.rs"
edition="2021"

[dependencies]
libc = "0.2"
log = "0.4"
proc-maps = "0.3.2"
read-process-memory = { git = "https://github.com/acj/read-process-memory.git", branch = "migrate-to-windows-sys" }
goblin = "0.6.1"
memmap = "0.7.0"
regex = ">=1.8.3"

[target.'cfg(target_os="macos")'.dependencies]
mach_o_sys = "0.1.1"
mach = "0.3.2"
libproc = "0.13"

[target.'cfg(target_os="linux")'.dependencies]
nix = {version = "0.26", default-features = false, features = ["ptrace", "sched", "signal"]}
object = "0.31"
addr2line = "0.20"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}
windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }

[dev-dependencies]
env_logger = "0.10"

[features]
default = []
unwind = []
